# lab_rab_5_6

./: .env  README.md  pyproject.toml
app/: DockerFile  __init__.py  auth.py  docker-compose.yml  models.py  views.py
app/templates/: base.html  config.py  emp_list.html
migrations/versions/: 3c17e970034f_update.py  74177dd0690e_3_migrate.py  a168d652f4e8_initial_migrate.py  aa88eff78efe_5_migrate.py  aba291b7a77d_update.py  b61b030e2354_2_migrate.py  cc3d64057e7d_update.py
templates/: config.py
